# zotero_arxiv

./: .gitignore  README.md  README_zh.md  config.example.yaml  pyproject.toml  requirements.txt
scripts/: install_daily_task.ps1  run_daily_generate.cmd  uninstall_daily_task.ps1
zotero_arxiv/: __main__.py  arxiv_client.py  commands.py  config.py  model.py  render.py  translator.py  utils.py  zotero_client.py
